--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     margin: 0%;
                 }
                 body {
-                    background-image: url(media/briksdal.png);
+                    background-image: linear-gradient(0.485turn,#f9f9f9 1%, 10%, transparent 15%), url(media/briksdal.png);
                     background-size: cover;
                     background-position: bottom;
                     background-repeat:no-repeat;
