--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <meta name="viewport" content="width-device-width, initial-scale=1.0">
             <link rel="stylesheet" href="https://use.typekit.net/wqn4imc.css">
             <link rel="icon" type="img/png" href="media/Logo.png">
-            <link rel="stylesheet" href="css/styles.css">
+            <link rel="stylesheet" type="text/css" href="css/styles.css"> 
         <!--NAV-->
         <div class="nav">
             <style>
