--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <link rel="icon" type="img/png" href="media/Logo.png">
             <link rel="stylesheet" type="text/css" href="css/styles.css"> 
         <!--NAV-->
-        <div class="nav">
+        <nav>
             <style>
                 body, html {
                     height: 100%;
@@ -28,13 +28,13 @@
             <title id="tile">DECAPOD</title>
             <p id="decapod">DECAPOD</p>
             <p id="slogan" href="#index">Feeding the World Sustainably</p>
-            <a href="#index">HOME</a>
-            <a href="#products">PRODUCTS</a>
-            <a href="#ourteam">OUR TEAM</a>
-            <a href="#recipes">RECIPES</a>
-            <a href="#partners">PARTNERS</a>
-            <a href="#sustainability">SUSTAINABILITY</a>
-        </div>
+            <a href="index.html">HOME</a>
+            <a href="products.html">PRODUCTS</a>
+            <a href="team.html">OUR TEAM</a>
+            <a href="recipes.html">RECIPES</a>
+            <a href="partners.html">PARTNERS</a>
+            <a href="sustainability.html">SUSTAINABILITY</a>
+        </nav>
     </head>
 
     <body style="margin:0">
@@ -66,10 +66,5 @@
                 <p class="abouttext2">Our methoods reduce carbon footprint and food waste while increaasing animal well being.</p>
             </div>
         </div>
-
-        <!-- CSS -->
-        <style>
-            
-        </style>
     </body>
 </html>
