--- a/team.html
+++ b/team.html
@@ -1,1 +1,38 @@
 <!doctype html>
+
+<html lang="en"> 
+    <head class="head">
+        <!--META-->
+            <meta charset="uft-8">
+            <meta http-equiv="refresh" content="2">
+            <meta name="viewport" content="width-device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="https://use.typekit.net/wqn4imc.css">
+            <link rel="icon" type="img/png" href="media/Logo.png">
+            <link rel="stylesheet" type="text/css" href="css/styles.css"> 
+        <!--NAV-->
+        <nav>
+            <style>
+                body, html {
+                    height: 100%;
+                    margin: 0%;
+                }
+                body {
+                    background-image: linear-gradient(0.485turn,#f9f9f9 1%, 10%, transparent 15%), url(media/janroar.jpg);
+                    background-size: cover;
+                    background-position: bottom;
+                    background-repeat:no-repeat;
+                    padding-bottom: 100%;
+                }
+            </style>
+            <title id="tile">DECAPOD</title>
+            <p id="decapod">DECAPOD</p>
+            <p id="slogan" href="#index">Feeding the World Sustainably</p>
+            <a href="index.html">HOME</a>
+            <a href="products.html">PRODUCTS</a>
+            <a href="team.html">OUR TEAM</a>
+            <a href="recipes.html">RECIPES</a>
+            <a href="partners.html">PARTNERS</a>
+            <a href="sustainability.html">SUSTAINABILITY</a>
+        </nav>
+    </head>
+</html>
