--- a/recipes.html
+++ b/recipes.html
@@ -4,7 +4,6 @@
     <head class="head">
         <!--META-->
             <meta charset="uft-8">
-            <meta http-equiv="refresh" content="2">
             <meta name="viewport" content="width-device-width, initial-scale=1.0">
             <link rel="stylesheet" href="https://use.typekit.net/wqn4imc.css">
             <link rel="icon" type="img/png" href="media/Logo.png">
@@ -17,7 +16,7 @@
                     margin: 0%;
                 }
                 body {
-                    background-image: linear-gradient(0.485turn,#f9f9f9 1%, 10%, transparent 15%), url(media/chef.jpg);
+                    background-image: url(media/chef.jpg);
                     background-size: cover;
                     background-position: bottom;
                     background-repeat:no-repeat;
@@ -36,3 +35,136 @@
         </nav>
     </head>
 </html>
+
+<style>
+    #logo {
+    position: fixed;
+    left: 20px;
+    top: 20px;
+    z-index: 1;
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+}
+#briksdal {
+    display: grid;
+    grid-template-columns: 1fr;
+    position: absolute;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+}
+#decapod {
+    position: fixed;
+    left: 70px;
+    top: -18px;
+    color: black;
+    text-align: left;
+    font-size: 34px;
+}
+#slogan {
+    font-family: relation-one;
+    position: fixed;
+    left: 71px;
+    top: 32px;
+    color: black;
+    font-size: 15px;
+}
+nav {
+    height: 9vh;
+    width: 105vh;
+    max-width: 700px;
+    display: flex;
+    justify-content: space-around;
+    align-items:center;
+    margin:auto;
+}
+nav a{
+    position: relative;
+    text-decoration: none;
+    font-family: raleway;
+    padding: 30px 0px;
+    color: black;
+    font-size: 15px;
+    padding: 6px;
+}
+nav a:after{
+    content: "";
+    position: absolute;
+    background-color: #ff9028;
+    height: 2px;
+    width: 0;
+    left: 0;
+    bottom: 5px;
+    transition: 0.3s;
+}
+nav a:hover{
+    color:#ff9028;
+}
+nav a:hover:after {
+    width:100%;
+}
+#maintitle {
+    color:#f9f9f9; 
+    font-size: 75px;
+    font-family: raleway;
+    text-align: center;
+    top: 30vh;
+    position:relative;
+    text-shadow:  -4px 4px 3px #2b2b2b;
+}
+#supportingtext {
+    color: #f9f9f9;
+    font-size: 30px;
+    font-family: relation-one;
+    text-align: center;
+    position:relative;
+    top:23vh;
+    text-shadow:  -4px 4px 3px #2b2b2b;
+}
+#crab {
+    float: right;
+    position: relative;
+    top: 60rem;
+    object-fit:cover;
+    width:40rem;
+}
+#abouttitle {
+    background-image: url(../media/Briksdalbottom.png);
+    position:relative;
+    top: 50rem;
+    font-family: adobe-caslon-pro, serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 2.5rem;
+    text-align: justify;
+    color:#656b6f;
+}
+.abouttext1 {
+    position:relative;
+    top:110vh;
+    font-family: adobe-caslon-pro, serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size:1.5rem;
+    line-height: 0.5rem;
+    text-align:center;
+    color:656b6f;
+}
+.abouttext2 {
+    position:relative;
+    top:110vh;
+    font-family: adobe-caslon-pro, serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size:1.2rem;
+    text-align: center;
+}
+body {
+    background-color: #f9f9f9;
+}
+
+
+
+</style>
