--- a/index.html
+++ b/index.html
@@ -68,17 +68,24 @@
             </div>
         </div>
         <!--Quotes-->
-        <div style=" position: relative; top: 120vh;font-family: adobe-calson-pro, serif;font-style: normal;font-size: 3rem;background-image: url(media/BrushStroke.png);background-repeat: no-repeat;background-position: center;background-size: contain; height:50rem;width: 40rem;text-align: center;">
-            <p>We've been serving crab for 35 years and have never seen produce like this</p>
+        <div class="quote" style= "top: 120vh;background-image: url(media/BrushStroke.png);">
+            <p style="position: absolute;top: 50%;-ms-transform: translateY(-50%);transform: translateY(-50%);">We've been serving crab for 35 years and have never seen produce like this</p>
         </div>
-        <div style="position: relative;top: 120vh;font-family: adobe-calson-pro, serif;font-style: normal;font-size: 3rem;background-image: url(media/BrushStroke.png);background-repeat: no-repeat;background-size: contain;height:40rem;width: 40rem;;text-align: center;">
-            <p>In terms of health and environmental sustainability Decapod's crab stands unmathced</p>
+        <div class="quote" style= "top: 120vh;background-image: url(media/BrushStroke.png);">
+            <p style="position: absolute;top: 50%;-ms-transform: translateY(-50%);transform: translateY(-50%);">In terms of health and environmental sustainability Decapod's crab stands unmathced</p>
         </div>
     </body>
 </html>
 
 <style>
-    #logo {
+    :root{
+    --darkblue: #233866;
+    --lightblue: #1897cc;
+    --backgroundgrey: #f9f9f9;
+    --darkred:#db0024;
+    --textgrey: #656b6f;
+}
+#logo {
     position: fixed;
     left: 20px;
     top: 20px;
@@ -147,7 +154,7 @@ nav a:hover:after {
     width:100%;
 }
 #maintitle {
-    color:#f9f9f9; 
+    color: var(--backgroundgrey); 
     font-size: 75px;
     font-family: raleway;
     text-align: center;
@@ -203,6 +210,68 @@ nav a:hover:after {
     text-align: center;
 }
 body {
-    background-color: #f9f9f9;
+    background-color: var(--backgroundgrey);
+}
+.quote {
+    position: relative;
+    font-family: adobe-calson-pro, serif;
+    font-style: normal;
+    font-size: 3rem;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height:30rem;
+    width: 35rem;
+    text-align: center;
+}
+.card{
+    color:#ffffff;
+    background-image: url(../media/singaporecrab.jpg);
+    background-size: cover;
+    padding: 10rem;
+    max-width: 35ch;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    font-family: adobe-calson-pro;
+    transition: transform 500ms ease;
+}
+.card:hover {
+    transform:scale(1.05);
+}
+.card-content{
+    background: rgba(35, 56, 102, 0.65);
+    transform: translate(-57%, 175%);
+    transition: transform 500ms ease; 
+    text-indent: 1rem;
+}
+.card:hover .card-content {
+    transform: translate(-57%, 100%);
+}
+.card-title {
+    position: relative;
+    width: max-content;
+}
+.card-title::after {
+    content:"";
+    position: absolute;
+    height: 4px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+.card:hover .card-title::after {
+    transform:scaleX(1);
+}
+.card-body{
+    color: rgb(255 255 255 / 0.85);
+}
+.button{
+    cursor: pointer;
+    display: inline;
+    text-decoration: none;
+    color: lightblue;
+    background-color: red;
+    padding: 0.5em 1.25em;
+    border-radius: 0.25rem;   
 }
 </style>
