--- a/recipes.html
+++ b/recipes.html
@@ -16,6 +16,10 @@
                     margin: 0%;
                 }
                 body {
+                    display: grid;
+                    min-height: 100vh;
+                    place-items: center;
+                    line-height: 1.6;
                     background-image: url(media/chef.jpg);
                     background-size: cover;
                     background-position: bottom;
@@ -34,10 +38,27 @@
             <a href="sustainability.html">SUSTAINABILITY</a>
         </nav>
     </head>
+
+    <body>
+        <div class="card">
+            <div class="card-content">
+                <h2 class="card-title">Singapore Crab</h2>
+                <p class="card-body">Deliciously spicy singapore style crab enhanced with Decapod crab</p>
+                <a href="#" class="button">Make Me</a>
+            </div>
+        </div>
+    </body>
 </html>
 
 <style>
-    #logo {
+    :root{
+    --darkblue: #233866;
+    --lightblue: #1897cc;
+    --backgroundgrey: #f9f9f9;
+    --darkred:#db0024;
+    --textgrey: #656b6f;
+}
+#logo {
     position: fixed;
     left: 20px;
     top: 20px;
@@ -106,7 +127,7 @@ nav a:hover:after {
     width:100%;
 }
 #maintitle {
-    color:#f9f9f9; 
+    color: var(--backgroundgrey); 
     font-size: 75px;
     font-family: raleway;
     text-align: center;
@@ -162,9 +183,68 @@ nav a:hover:after {
     text-align: center;
 }
 body {
-    background-color: #f9f9f9;
+    background-color: var(--backgroundgrey);
 }
-
-
-
+.quote {
+    position: relative;
+    font-family: adobe-calson-pro, serif;
+    font-style: normal;
+    font-size: 3rem;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height:30rem;
+    width: 35rem;
+    text-align: center;
+}
+.card{
+    color:#ffffff;
+    background-image: url(../media/singaporecrab.jpg);
+    background-size: cover;
+    padding: 10rem;
+    max-width: 35ch;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    font-family: adobe-calson-pro;
+    transition: transform 500ms ease;
+}
+.card:hover {
+    transform:scale(1.05);
+}
+.card-content{
+    background: rgba(35, 56, 102, 0.65);
+    transform: translate(-57%, 175%);
+    transition: transform 500ms ease; 
+    text-indent: 1rem;
+}
+.card:hover .card-content {
+    transform: translate(-57%, 100%);
+}
+.card-title {
+    position: relative;
+    width: max-content;
+}
+.card-title::after {
+    content:"";
+    position: absolute;
+    height: 4px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+.card:hover .card-title::after {
+    transform:scaleX(1);
+}
+.card-body{
+    color: rgb(255 255 255 / 0.85);
+}
+.button{
+    cursor: pointer;
+    display: inline;
+    text-decoration: none;
+    color: lightblue;
+    background-color: red;
+    padding: 0.5em 1.25em;
+    border-radius: 0.25rem;   
+}
 </style>
